--- a/plugin.xml
+++ b/plugin.xml
@@ -49,18 +49,19 @@
     <source-file src="src/android/com/ionicframework/cordova/webview/AndroidProtocolHandler.java" target-dir="src/com/ionicframework/cordova/webview"/>
     <source-file src="src/android/com/ionicframework/cordova/webview/UriMatcher.java" target-dir="src/com/ionicframework/cordova/webview"/>
     <source-file src="src/android/com/ionicframework/cordova/webview/WebViewLocalServer.java" target-dir="src/com/ionicframework/cordova/webview"/>
-	    <source-file src="src/android/com/lifang123/cordova/webview/IonicCrosswalkWebViewEngine.java" target-dir="src/com/lifang123/cordova/webview"/>
+	<source-file src="src/android/com/lifang123/cordova/webview/IonicCrosswalkWebViewEngine.java" target-dir="src/com/lifang123/cordova/webview"/>
     <source-file src="src/android/com/lifang123/cordova/webview/IonicCrosswalkWebView.java" target-dir="src/com/lifang123/cordova/webview"/>
     <source-file src="src/android/com/lifang123/cordova/webview/CrosswalkWebViewEngine.java" target-dir="src/com/lifang123/cordova/webview"/>
 	
     <preference name="ANDROID_SUPPORT_ANNOTATIONS_VERSION" default="27.+"/>
     <framework src="com.android.support:support-annotations:$ANDROID_SUPPORT_ANNOTATIONS_VERSION"/>
 
+    <preference name="WEBVIEW_ENGINE" default="AUTO"/>
     <preference name="XWALK_VERSION" default="23+"/>
     <preference name="XWALK_LITEVERSION" default="xwalk_core_library_canary:17+"/>
     <preference name="XWALK_COMMANDLINE" default="--disable-pull-to-refresh-effect --ignore-gpu-blacklist"/>
     <preference name="XWALK_MODE" default="embedded" />
-    <preference name="XWALK_MULTIPLEAPK" default="true" />
+    <preference name="XWALK_MULTIPLEAPK" default="false" />
     <config-file target="res/xml/config.xml" parent="/*">
 
     </config-file>
@@ -79,7 +80,7 @@
     <source-file src="src/android/org/crosswalk/engine/XWalkCordovaCookieManager.java" target-dir="src/org/crosswalk/engine"/>
     <source-file src="src/android/org/crosswalk/engine/XWalkCordovaClientCertRequest.java" target-dir="src/org/crosswalk/engine"/>
     <source-file src="src/android/org/crosswalk/engine/XWalkCordovaHttpAuthHandler.java" target-dir="src/org/crosswalk/engine"/>
-    <source-file src="src/android/libs/xwalk_77.aar" target-dir="src/libs/"/>
+    <source-file src="src/android/libs/xwalk_53.aar" target-dir="src/libs/"/>
 
     <framework src="src/android/xwalk.gradle" custom="true" type="gradleReference"/>
 
